add base functions of todo

--- a/package.yaml
+++ b/package.yaml
@@ -1,48 +1,36 @@
-name:                haskTodo
-version:             0.1.0.0
-github:              "githubuser/haskTodo"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
-
+library:
+  source-dirs: src
+tests:
+  haskTodo-test:
+    source-dirs: test
+    main: Spec.hs
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - haskTodo
+copyright: 2018 Author name here
+maintainer: example@example.com
+dependencies:
+- base >= 4.7 && < 5
+name: haskTodo
+version: 0.1.0.0
 extra-source-files:
 - README.md
 - ChangeLog.md
-
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/haskTodo#readme>
-
-dependencies:
-- base >= 4.7 && < 5
-
-library:
-  source-dirs: src
-
+author: Author name here
+github: githubuser/haskTodo
+license: BSD3
 executables:
   haskTodo-exe:
-    main:                Main.hs
-    source-dirs:         app
+    source-dirs: app
+    main: Main.hs
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - directory
     - haskTodo
-
-tests:
-  haskTodo-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - haskTodo
+description: Please see the README on GitHub at <https://github.com/githubuser/haskTodo#readme>
